--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "harsh_sinha_sigaramtask",
+    "name": "Sigaram Task",
     "slug": "harsh_sinha_sigaramtask",
     "version": "1.0.0",
     "orientation": "portrait",
